ecmascript/parser/tests/test262-error-references/fail/b94007220f24ebe5.js.stderr
error: Unexpected token Some(Semi)
 --> $DIR/tests/test262-parser/fail/b94007220f24ebe5.js:1:20
  |
1 | const x = 0, y = 1,;
  |                    ^

